// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[getDotTriples withEntities not found] "
  to simplify things, this
  mini-syntax :: spans
  only one line
  " 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "spans",
    },
    "predicate": Object {
      "raw": "mini-syntax",
    },
    "raw": "  mini-syntax :: spans",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities not found] " something :: points at :: [[Note]]" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": undefined,
        },
      ],
      "raw": "[[Note]]",
    },
    "predicate": Object {
      "raw": "points at",
    },
    "raw": " something :: points at :: [[Note]]",
    "subject": Object {
      "raw": "something",
    },
  },
]
`;

exports[`[getDotTriples withEntities not found] " something :: points at :: __THIS__" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
    "predicate": Object {
      "raw": "points at",
    },
    "raw": " something :: points at :: __THIS__",
    "subject": Object {
      "raw": "something",
    },
  },
]
`;

exports[`[getDotTriples withEntities not found] "[[Note]] :: is a :: note" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "note",
    },
    "predicate": Object {
      "raw": "is a",
    },
    "raw": "[[Note]] :: is a :: note",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": undefined,
        },
      ],
      "raw": "[[Note]]",
    },
  },
]
`;

exports[`[getDotTriples withEntities not found] "__THIS__ :: is a :: note" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "note",
    },
    "predicate": Object {
      "raw": "is a",
    },
    "raw": "__THIS__ :: is a :: note",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities not found] "A :: B :: C :: D" 1`] = `
Array [
  Object {
    "exception": "ambiguous",
    "raw": "A :: B :: C :: D",
  },
]
`;

exports[`[getDotTriples withEntities not found] "Maria :: climbed :: the tree" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "the tree",
    },
    "predicate": Object {
      "raw": "climbed",
    },
    "raw": "Maria :: climbed :: the tree",
    "subject": Object {
      "raw": "Maria",
    },
  },
]
`;

exports[`[getDotTriples withEntities not found] "date :: 2022-01-07 15:07" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "2022-01-07 15:07",
    },
    "predicate": Object {
      "raw": "date",
    },
    "raw": "date :: 2022-01-07 15:07",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities not found] "external link :: <http://example.org>" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "<http://example.org>",
    },
    "predicate": Object {
      "raw": "external link",
    },
    "raw": "external link :: <http://example.org>",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities not found] "external link :: http://example.org" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "http://example.org",
    },
    "predicate": Object {
      "raw": "external link",
    },
    "raw": "external link :: http://example.org",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities not found] "internal link :: [[link]]" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": undefined,
        },
      ],
      "raw": "[[link]]",
    },
    "predicate": Object {
      "raw": "internal link",
    },
    "raw": "internal link :: [[link]]",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities not found] "is a :: [[Editor]], [[Jour]]" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": undefined,
        },
        Object {
          "type": "uri",
          "value": undefined,
        },
      ],
      "raw": "[[Editor]], [[Jour]]",
    },
    "predicate": Object {
      "raw": "is a",
    },
    "raw": "is a :: [[Editor]], [[Jour]]",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities not found] "properties :: and values are separated by double colons" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "and values are separated by double colons",
    },
    "predicate": Object {
      "raw": "properties",
    },
    "raw": "properties :: and values are separated by double colons",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities not found] "subject :: 'Quotes escape :: characters' :: object" 1`] = `
Array [
  Object {
    "exception": "ambiguous",
    "raw": "subject :: 'Quotes escape :: characters' :: object",
  },
]
`;

exports[`[getDotTriples withEntities not found] "vaccination dates :: 2022-01-07, next week" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "2022-01-07, next week",
    },
    "predicate": Object {
      "raw": "vaccination dates",
    },
    "raw": "vaccination dates :: 2022-01-07, next week",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities] "
  to simplify things, this
  mini-syntax :: spans
  only one line
  " 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "spans",
    },
    "predicate": Object {
      "raw": "mini-syntax",
    },
    "raw": "  mini-syntax :: spans",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities] " something :: points at :: [[Note]]" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "Note_URI",
        },
      ],
      "raw": "[[Note]]",
    },
    "predicate": Object {
      "raw": "points at",
    },
    "raw": " something :: points at :: [[Note]]",
    "subject": Object {
      "raw": "something",
    },
  },
]
`;

exports[`[getDotTriples withEntities] " something :: points at :: __THIS__" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
    "predicate": Object {
      "raw": "points at",
    },
    "raw": " something :: points at :: __THIS__",
    "subject": Object {
      "raw": "something",
    },
  },
]
`;

exports[`[getDotTriples withEntities] "[[Note]] :: is a :: note" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "note",
    },
    "predicate": Object {
      "raw": "is a",
    },
    "raw": "[[Note]] :: is a :: note",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "Note_URI",
        },
      ],
      "raw": "[[Note]]",
    },
  },
]
`;

exports[`[getDotTriples withEntities] "__THIS__ :: is a :: note" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "note",
    },
    "predicate": Object {
      "raw": "is a",
    },
    "raw": "__THIS__ :: is a :: note",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities] "A :: B :: C :: D" 1`] = `
Array [
  Object {
    "exception": "ambiguous",
    "raw": "A :: B :: C :: D",
  },
]
`;

exports[`[getDotTriples withEntities] "Maria :: climbed :: the tree" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "the tree",
    },
    "predicate": Object {
      "raw": "climbed",
    },
    "raw": "Maria :: climbed :: the tree",
    "subject": Object {
      "raw": "Maria",
    },
  },
]
`;

exports[`[getDotTriples withEntities] "date :: 2022-01-07 15:07" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "2022-01-07 15:07",
    },
    "predicate": Object {
      "raw": "date",
    },
    "raw": "date :: 2022-01-07 15:07",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities] "external link :: <http://example.org>" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "<http://example.org>",
    },
    "predicate": Object {
      "raw": "external link",
    },
    "raw": "external link :: <http://example.org>",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities] "external link :: http://example.org" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "http://example.org",
    },
    "predicate": Object {
      "raw": "external link",
    },
    "raw": "external link :: http://example.org",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities] "internal link :: [[link]]" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "link_URI",
        },
      ],
      "raw": "[[link]]",
    },
    "predicate": Object {
      "raw": "internal link",
    },
    "raw": "internal link :: [[link]]",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities] "is a :: [[Editor]], [[Jour]]" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "Editor_URI",
        },
        Object {
          "type": "uri",
          "value": "Jour_URI",
        },
      ],
      "raw": "[[Editor]], [[Jour]]",
    },
    "predicate": Object {
      "raw": "is a",
    },
    "raw": "is a :: [[Editor]], [[Jour]]",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities] "properties :: and values are separated by double colons" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "and values are separated by double colons",
    },
    "predicate": Object {
      "raw": "properties",
    },
    "raw": "properties :: and values are separated by double colons",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples withEntities] "subject :: 'Quotes escape :: characters' :: object" 1`] = `
Array [
  Object {
    "exception": "ambiguous",
    "raw": "subject :: 'Quotes escape :: characters' :: object",
  },
]
`;

exports[`[getDotTriples withEntities] "vaccination dates :: 2022-01-07, next week" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": "2022-01-07, next week",
    },
    "predicate": Object {
      "raw": "vaccination dates",
    },
    "raw": "vaccination dates :: 2022-01-07, next week",
    "subject": Object {
      "entities": Array [
        Object {
          "type": "uri",
          "value": "CURRENT_URI",
        },
      ],
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples] "
  to simplify things, this
  mini-syntax :: spans
  only one line
  " 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " spans",
    },
    "predicate": Object {
      "raw": "  mini-syntax ",
    },
    "raw": "  mini-syntax :: spans",
    "subject": Object {
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples] " something :: points at :: [[Note]]" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " [[Note]]",
    },
    "predicate": Object {
      "raw": " points at ",
    },
    "raw": " something :: points at :: [[Note]]",
    "subject": Object {
      "raw": " something ",
    },
  },
]
`;

exports[`[getDotTriples] " something :: points at :: __THIS__" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " __THIS__",
    },
    "predicate": Object {
      "raw": " points at ",
    },
    "raw": " something :: points at :: __THIS__",
    "subject": Object {
      "raw": " something ",
    },
  },
]
`;

exports[`[getDotTriples] "[[Note]] :: is a :: note" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " note",
    },
    "predicate": Object {
      "raw": " is a ",
    },
    "raw": "[[Note]] :: is a :: note",
    "subject": Object {
      "raw": "[[Note]] ",
    },
  },
]
`;

exports[`[getDotTriples] "__THIS__ :: is a :: note" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " note",
    },
    "predicate": Object {
      "raw": " is a ",
    },
    "raw": "__THIS__ :: is a :: note",
    "subject": Object {
      "raw": "__THIS__ ",
    },
  },
]
`;

exports[`[getDotTriples] "A :: B :: C :: D" 1`] = `
Array [
  Object {
    "exception": "ambiguous",
    "raw": "A :: B :: C :: D",
  },
]
`;

exports[`[getDotTriples] "Maria :: climbed :: the tree" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " the tree",
    },
    "predicate": Object {
      "raw": " climbed ",
    },
    "raw": "Maria :: climbed :: the tree",
    "subject": Object {
      "raw": "Maria ",
    },
  },
]
`;

exports[`[getDotTriples] "date :: 2022-01-07 15:07" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " 2022-01-07 15:07",
    },
    "predicate": Object {
      "raw": "date ",
    },
    "raw": "date :: 2022-01-07 15:07",
    "subject": Object {
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples] "external link :: <http://example.org>" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " <http://example.org>",
    },
    "predicate": Object {
      "raw": "external link ",
    },
    "raw": "external link :: <http://example.org>",
    "subject": Object {
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples] "external link :: http://example.org" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " http://example.org",
    },
    "predicate": Object {
      "raw": "external link ",
    },
    "raw": "external link :: http://example.org",
    "subject": Object {
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples] "internal link :: [[link]]" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " [[link]]",
    },
    "predicate": Object {
      "raw": "internal link ",
    },
    "raw": "internal link :: [[link]]",
    "subject": Object {
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples] "is a :: [[Editor]], [[Jour]]" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " [[Editor]], [[Jour]]",
    },
    "predicate": Object {
      "raw": "is a ",
    },
    "raw": "is a :: [[Editor]], [[Jour]]",
    "subject": Object {
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples] "properties :: and values are separated by double colons" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " and values are separated by double colons",
    },
    "predicate": Object {
      "raw": "properties ",
    },
    "raw": "properties :: and values are separated by double colons",
    "subject": Object {
      "raw": "__THIS__",
    },
  },
]
`;

exports[`[getDotTriples] "subject :: 'Quotes escape :: characters' :: object" 1`] = `
Array [
  Object {
    "exception": "ambiguous",
    "raw": "subject :: 'Quotes escape :: characters' :: object",
  },
]
`;

exports[`[getDotTriples] "vaccination dates :: 2022-01-07, next week" 1`] = `
Array [
  Object {
    "object": Object {
      "raw": " 2022-01-07, next week",
    },
    "predicate": Object {
      "raw": "vaccination dates ",
    },
    "raw": "vaccination dates :: 2022-01-07, next week",
    "subject": Object {
      "raw": "__THIS__",
    },
  },
]
`;
